--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-/bin
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
